--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@ export default function LandingPage() {
             allowFullScreen
           ></iframe>
         </div>
+          <footer>
+    <p>אתר זה נוצר על ידי יששכר סיימון - בניית אתרים 💻<br>
+    רוצים אתר בעצמכם? שלחו הודעה ל־
+    <a href="https://wa.me/972553151070" style="color: #ffc107; text-decoration: none;">055-3151070</a></p>
+  </footer>
       </div>
     </div>
   );
