--- a/index.html
+++ b/index.html
@@ -119,6 +119,19 @@ export default function LandingPage() {
           ></iframe>
         </div>
       </div>
+
+      <footer className="mt-24 text-center text-yellow-700 text-sm border-t border-yellow-200 pt-6 pb-12 px-4 max-w-4xl">
+        <p>
+          אתר זה נוצר על ידי <strong>יששכר סיימון</strong> — בניית אתרים 💻<br />
+          רוצים אתר בעצמכם? שלחו הודעה ל־
+          <a
+            href="https://wa.me/972553151070"
+            className="text-yellow-600 hover:text-yellow-700 underline transition"
+          >
+            055‑3151070
+          </a>
+        </p>
+      </footer>
     </div>
   );
 }
